--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bakpawel103/watch-me.git"
   },
   "dependencies": {
-    "ejs": "~1.0.0",
-    "express": "~4.9.8"
+    "consolidate": "^0.16.0",
+    "ejs": "^1.0.0",
+    "express": "~4.9.8",
+    "nodemon": "^2.0.15",
+    "cors": "^2.8.5",
+    "swig": "^1.4.2"
   },
   "author": "",
   "license": "ISC",
