--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "url": "git+https://github.com/bakpawel103/watch-me.git"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "consolidate": "^0.16.0",
+    "cors": "^2.8.5",
     "ejs": "^1.0.0",
     "express": "~4.9.8",
+    "html-element-stringify": "^0.2.0",
+    "jquery": "^3.6.0",
+    "jsdom": "^18.1.0",
     "nodemon": "^2.0.15",
-    "cors": "^2.8.5",
     "swig": "^1.4.2"
   },
   "author": "",
